--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,15 +6,11 @@
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item" *ngFor="let menu of menus">
-            <a class="nav-link" [href]="menu.link">{{menu.name}}</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+          <li class="nav-item {{menu.menus ? 'dropdown':''}}" *ngFor="let menu of menus">
+            <a class="nav-link" [href]="menu.link" *ngIf="!menu.menus">{{menu.name}}</a>
+            <a class="nav-link dropdown-toggle" [href]="menu.link" *ngIf="menu.menus" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" [id]="menu.id">{{menu.name}}</a>
+            <div class="dropdown-menu" *ngIf="menu.menus" [attr.aria-labelledby]="menu.id">
+                <a class="dropdown-item" *ngFor="let menu of menu.menus" [href]="menu.link">{{menu.name}}</a>
             </div>
           </li>
         </ul>
