--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
 <app-navbar></app-navbar>
-<app-jumboton></app-jumboton>
-<app-feature></app-feature>
+<router-outlet></router-outlet>
 <app-contact></app-contact>
-
